--- a/views/index.pug
+++ b/views/index.pug
@@ -1,10 +1,19 @@
 extends layout/main
 block content
+  style.
+    .bigimg {
+      width: 68.125rem;
+    }
+    @media screen and (max-width: 1100px) {
+      .bigimg{
+        width:30rem
+      }
+    }
   div.container-fluid(style="background-color: #3838c8;  width:100%; height:100%")
     .container
       include components/alert
     .container.d-flex.justify-content-center.align-items-center
-      img(src="index.png" style="width:68.125rem", alt="")
+      img.bigimg(src="index.png" style="" , alt="")
   .container.mt-3
     include components/searchbox
     .row
