--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
     }
     @media screen and (max-width: 1100px) {
       .bigimg{
-        width:30rem
+        width:100%
       }
     }
   div.container-fluid(style="background-color: #3838c8;  width:100%; height:100%")
