add navbar hover color

--- a/views/components/navbar.pug
+++ b/views/components/navbar.pug
@@ -12,6 +12,10 @@ style.
     display:flex;
   }
 
+  .flex-item a :hover{
+      color:yellow;
+    }
+
   .flex-button{
     display:flex;
   }
@@ -45,12 +49,16 @@ style.
       display:none;
       flex-direction: column;
     }
+    .flex-item a{
+      height:15px;
+    }
     .flex-button{
       display:none;
     }
     .nav-active{
       display:flex
     }
+
     }
 div(style='background-color:#2759be;')
   .container
